tests/rosetta/out/Smalltalk/accumulator-factory.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| accumulator store add main x |
accumulator := [:sum | store := {sum}.
add := [:nv | store at: 0 put: ((store at: 0) + nv).
store at: 0. ].
add. ].
main := [ x := accumulator value: 1.
x value: 5.
accumulator value: 3.
Transcript show: ((x value: 2.3 asString)) printString; cr. ].
main value.
